--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="../assets\css\style1.css" rel="stylesheet">
+    <link href="assets\css\style1.css" rel="stylesheet">
     <title>iVolonteri</title>
 </head>
 <body class="bg-dark">
@@ -18,9 +18,9 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="zapisnik.html">Zapisnik Sati</a>
+                <a class="nav-link" href="/pages/zapisnik.html">Zapisnik Sati</a>
               </li>
-                <a class="nav-link" href="akcije.html">Pregledaj Volonterske Akcije</a>
+                <a class="nav-link" href="/pages/zapisnik.html">Pregledaj Volonterske Akcije</a>
               </li>
             </ul>
             <form class="d-flex" onsubmit="return Pretraži(event)">
