--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </p>
         </div>
         <div class="col">
-          <img src="../assets/img/branimir.png" alt="Branimir na prošlom EDITu" class="rounded float-start portrait">
+          <img src="assets/img/branimir.png" alt="Branimir na prošlom EDITu" class="rounded float-start portrait">
         </div>
       </div>
       <div class="row justify-content-md-center text-white">
@@ -82,7 +82,7 @@
           </p>
         </div>
         <div class="col">
-          <img src="../assets/img/paul.png" alt="Slika Paula" class="rounded float-start portrait">
+          <img src="assets/img/paul.png" alt="Slika Paula" class="rounded float-start portrait">
         </div>
       </div>
     </div>
