radi sad molinte

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="/pages/zapisnik.html">Zapisnik Sati</a>
+                <a class="nav-link" href="pages/zapisnik.html">Zapisnik Sati</a>
               </li>
-                <a class="nav-link" href="/pages/zapisnik.html">Pregledaj Volonterske Akcije</a>
+                <a class="nav-link" href="pages/zapisnik.html">Pregledaj Volonterske Akcije</a>
               </li>
             </ul>
             <form class="d-flex" onsubmit="return Pretraži(event)">
