--- a/pages/zapisnik.html
+++ b/pages/zapisnik.html
@@ -6,10 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  
-  <style>
-    
-  </style>
+
   <link rel="stylesheet" href="../assets\css\style1.css">
   <title>Zapisnik Sati</title>
 </head>
@@ -17,7 +14,7 @@
 <body class="bg-dark" style="background-image: url('../assets/img/login_backround.jpg'); background-size: cover; background-blend-mode: overlay; background-repeat: no-repeat;">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">iVolonteri</a>
+      <a class="navbar-brand" href="../index.html">iVolonteri</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
