--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="pages/zapisnik.html">Zapisnik Sati</a>
               </li>
-                <a class="nav-link" href="pages/zapisnik.html">Pregledaj Volonterske Akcije</a>
+                <a class="nav-link" href="pages/akcije.html">Pregledaj Volonterske Akcije</a>
               </li>
             </ul>
             <form class="d-flex" onsubmit="return Pretraži(event)">
