--- a/pages/akcije.html
+++ b/pages/akcije.html
@@ -11,7 +11,7 @@
 <body class="bg-dark">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="..\index.html">iVolonteri</a>
+      <a class="navbar-brand" href="index.html">iVolonteri</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -20,22 +20,33 @@
           <li class="nav-item">
             <a class="nav-link" href="zapisnik.html">Zapisnik Sati</a>
           </li>
-          <li class="nav-item">
             <a class="nav-link" href="akcije.html">Pregledaj Volonterske Akcije</a>
+
+
+
+
+
+
+
+
+
+
+
+            
           </li>
         </ul>
-        <form class="d-flex" onsubmit="return Pretraži(event)">
-          <input class="form-control me-2" id="search" type="search" placeholder="Split" aria-label="Search">
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Split" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Pretraži</button>
         </form>
       </div>
     </div>
   </nav>
-  <div class="container" id="container">
+  <div class="container">
     <div class="search"></div>
     <div class="akcije">
       <div class="card" style="width: 18rem; margin: 5px; display: inline-block;"> <!--OD OVOG-->
-        <img src="../assets/img/brackeSape.jpg" class="card-img-top" alt="Spašeni pas">
+        <img src="../assets/img/bračke šape2.jpg" class="card-img-top" alt="">
         <div class="card-body">
           <h5 class="card-title">Bračke šape, Otok Brač</h5>
           <p class="card-text">Skupina volontera i ljubitelja životinja koji će na našem otoku pokušati pomoći životinjama koje pomoć trebaju.</p>
@@ -43,47 +54,46 @@
         </div>
       </div> <!--DO OVOG-->
       <div class="card" style="width: 18rem; margin: 5px; display: inline-block;"> <!--OD OVOG-->
-        <img src="../assets/img/splitskeSape.jpg" class="card-img-top" alt="Spašeni pas">
+        <img src="../assets/img/Splitske šape.jpg" class="card-img-top" alt="ime akcije">
         <div class="card-body">
           <h5 class="card-title">Splitske šape, Split</h5>
           <p class="card-text">Oglašavanje izgubljenih ljubimaca za područje grada Splita. Pomoć kod traženja smještaja, liječenja ili financiranja liječenja i hrane.</p>
           <a href="https://hr-hr.facebook.com/SplitskeSape/" class="btn btn-primary">Posjetite stranicu akciju</a>
-        </div>
-      </div> <!--DO OVOG-->
+        </div>      </div> <!--DO OVOG-->
       <div class="card" style="width: 18rem; margin: 5px; display: inline-block;"> <!--OD OVOG-->
-        <img src="../assets/img/crveniKriz.jpg" class="card-img-top" alt="volonteri crvenog križa">
+        <img src="../assets/img/crveni križ2.jpg" class="card-img-top" alt="pas">
         <div class="card-body">
-          <h5 class="card-title">Crveni križ, Split</h5>
-          <p class="card-text">Splitski ogranak humanitarne organizacije Crveni križ.</p>
+          <h5 class="card-title">Crveni križ, Splitsko dalmatinska županija</h5>
+          <p class="card-text">Splitski ogranak humanitarne organizacije Crveni križ. </p>
           <a href="https://www.hck.hr/adresar/splitsko-dalmatinska/65" class="btn btn-primary">Posjetite stranicu akciju</a>
         </div>
       </div> <!--DO OVOG-->
       <div class="card" style="width: 18rem; margin: 5px; display: inline-block;"> <!--OD OVOG-->
-        <img src="../assets/img/pokretOtoka.png" class="card-img-top" alt="logo Pokreta otoka">
+        <img src="../assets/img/boranka.jpg" class="card-img-top" alt="ime akcije">
         <div class="card-body">
-          <h5 class="card-title">Pokret Otoka, Šolta</h5>
-          <p class="card-text">Pokret otoka okuplja brojne otočane i stručnjake koji žele doprinijeti održivom razvoju hrvatskih otoka. Brojimo desetke volontera iz cijele Hrvatske, različitih vještina i iskustava koji redovito doprinose radu udruge kroz virtualan rad od kuće. Svim volonterima omogućavamo mentorstvo, informiranje i umrežavanje sa zanimljivim i proaktivnim pojedincima.</p>
-          <a href="https://www.otoci.eu/volontiraj/" class="btn btn-primary">Posjetite stranicu akciju</a>
+          <h5 class="card-title">Boranka, Dalmacija</h5>
+          <p class="card-text">Savez izviđača Hrvatske, Hrvatske šume i Hrvatska gorska služba spašavanja pokrenuli su kampanju Boranka, projekt pošumljavanja opožarenih područja Dalmacije.</p>
+          <a href="https://hr-hr.facebook.com/boranka.hr/" class="btn btn-primary">Posjetite stranicu akciju</a>
         </div>
       </div> <!--DO OVOG-->
       <div class="card" style="width: 18rem; margin: 5px; display: inline-block;"> <!--OD OVOG-->
-        <img src="../assets/img/ekoZadar.jpg" class="card-img-top" alt="EKO Zadar volonteri">
+        <img src="../assets/img/ZMAG.jpg" class="card-img-top" alt="ime akcije">
         <div class="card-body">
-          <h5 class="card-title">EKO Zadar, Zadar</h5>
-          <p class="card-text">Udruga Eko-Zadar korisnica je institucionalne podrške Nacionalne zaklade za razvoj civilnoga društva za stabilizaciju i razvoj udruge.</p>
-          <a href="https://ekozadar.hr/" class="btn btn-primary">Posjetite stranicu akciju</a>
+          <h5 class="card-title">Zelena mreža aktivističkih grupa, Splitsko dalmatinska župaija</h5>
+          <p class="card-text">ZMAG teži svijetu u kojem ljudi imaju zadovoljene životne uvjete, socijalna i ljudska prava, pri čemu se ne ugrožava okoliš i održivost ekosustava</p>
+          <a href="https://www.udruga-mi.hr/pocetna/osnovali-smo/mi-centar-za-pomoc-i-njegu" class="btn btn-primary">Posjetite stranicu akciju</a>
         </div>
       </div> <!--DO OVOG-->
       <div class="card" style="width: 18rem; margin: 5px; display: inline-block;"> <!--OD OVOG-->
-        <img src="../assets/img/burzaDobrote.png" class="card-img-top" alt="logo Pokreta otoka">
+        <img src="../assets/img/KAJO_DADIĆ!.jpg" class="card-img-top" alt="ime akcije">
         <div class="card-body">
-          <h5 class="card-title">Burza Dobrote, Dubrovnik</h5>
-          <p class="card-text">Burza Dobrote je projekt Udruge za razvoj civilnog društva Bonsai koji promovira volonterstvo kao način aktivnog sudjelovanja u društvu, te doprinosi unapređenju postojeće volonterske infrastrukture. Projektom se želi podići svijest o prednostima dobrovoljnog sudjelovanja u izgradnji bolje i sretnije zajednice, te dugoročno osigurati kvalitetno i svrhovito volontiranje na području grada Dubrovnika.</p>
-          <a href="https://www.burzadobrote.com/" class="btn btn-primary">Posjetite stranicu akciju</a>
+          <h5 class="card-title">Zaklada Kajo Dadić, Splitsko dalmatinska župaija</h5>
+          <p class="card-text">Neprofitna organizacija za promicanje razvoja civilnoga društva, razvoj filantropije, stipendiranje učenika i studenata.</p>
+          <a href="https://www.facebook.com/zakladakajodadic/" class="btn btn-primary">Posjetite stranicu akciju</a>
         </div>
       </div> <!--DO OVOG-->
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="../js/main.js"></script>
+  <script type="text/javascript" src="../js/volonterskeAkcije.js"></script>
 </html>
