--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="assets\css\style1.css" rel="stylesheet">
+    <link href="../assets\css\style1.css" rel="stylesheet">
     <title>iVolonteri</title>
 </head>
 <body class="bg-dark">
@@ -18,47 +18,47 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="pages/zapisnik.html">Zapisnik Sati</a>
+                <a class="nav-link" href="zapisnik.html">Zapisnik Sati</a>
               </li>
-                <a class="nav-link" href="pages/akcije.html">Pregledaj Volonterske Akcije</a>
+                <a class="nav-link" href="akcije.html">Pregledaj Volonterske Akcije</a>
               </li>
             </ul>
-            <form class="d-flex" onsubmit="return Pretraži(event)">
-              <input class="form-control me-2" id="search" type="search" placeholder="Split" aria-label="Search">
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Split" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Pretraži</button>
             </form>
           </div>
         </div>
     </nav>
-    <div class="container" id="container">
-      <div class="row justify-content-md-center text-white">
+    <div class="container text-white">
+      <div class="row justify-content-md-center">
         <div class="col-md-auto">
           <h1>iVolonteri</h1>
         </div>
       </div>
-      <div class="row justify-content-md-center text-white">
+      <div class="row justify-content-md-center">
         <div class="col-md-auto">
           <h4>Ova aplikacija će Vam pomoći u pronalaženju volonterskih akcija!</h4>
         </div>
       </div>
-      <div class="row justify-content-md-center text-white">
+      <div class="row justify-content-md-center">
         <div class="col-md-auto">
           <h2>O nama</h2>
         </div>
       </div>
-      <div class="row justify-content-md-center text-white">
+      <div class="row justify-content-md-center">
         <div class="col-md-auto">
           <p>Mi smo Branimir Vid Maljković i Paul Damjanović i nakon što smo vidjeli kako je teško pronaći volonterske akcije odlučili smo napraviti aplikaciju sa kojom možete lagano pronaći lokalne volonterske akcije.
             
           </p>
         </div>
       </div>
-      <div class="row justify-content-md-center text-white">
+      <div class="row justify-content-md-center">
         <div class="col-md-auto">
           <h2>Branimir Vid Maljković</h2>
         </div>
       </div>
-      <div class="row justify-content-md-center text-white">
+      <div class="row justify-content-md-center">
         <div class="col">
           <p>Branimir Vid Maljković rođen 9.1.2007. pohađao je osnovnu školu u OŠ Marjan, a srednju školu pohađa u Prirodoslovnoj školi Split na smjeru Gimnazija.
             Počeo je programirati sa 13 kada je u sedmom razredu prvi put pohađao EDIT.
@@ -67,25 +67,25 @@
           </p>
         </div>
         <div class="col">
-          <img src="assets/img/branimir.png" alt="Branimir na prošlom EDITu" class="rounded float-start portrait">
+          <img src="../assets/img/branimir.png" alt="Branimir na prošlom EDITu" class="rounded float-start portrait">
         </div>
       </div>
-      <div class="row justify-content-md-center text-white">
+      <div class="row justify-content-md-center">
         <div class="col-md-auto">
           <h2>Paul Damjanović</h2>
         </div>
       </div>
-      <div class="row justify-content-md-center text-white">
+      <div class="row justify-content-md-center">
         <div class="col">
           <p>Paul Damjanović rođen 12.4.2005. pohađao je Osnovnu školu Brač, te trenutno pohađa drugi razred opće gimnazije u Srednjoj školi Brač.
             Počeo je programirati sa 14 kada je u osmom razredu prvi put pohađao EDIT. 
           </p>
         </div>
         <div class="col">
-          <img src="assets/img/paul.png" alt="Slika Paula" class="rounded float-start portrait">
+          <img src="../assets/img/paul.png" alt="Slika Paula" class="rounded float-start portrait">
         </div>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="../js/main.js"></script>
 </html>
