--- a/pages/zapisnik.html
+++ b/pages/zapisnik.html
@@ -5,17 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
   <link rel="stylesheet" href="../assets\css\style1.css">
   <title>Zapisnik Sati</title>
 </head>
 
-<body class="bg-dark" style="background-image: url('../assets/img/login_backround.jpg'); background-size: cover; background-blend-mode: overlay; background-repeat: no-repeat;">
+<body  class="bg-dark">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="..\index.html">iVolonteri</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="index.html">iVolonteri</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -23,19 +26,18 @@
           <li class="nav-item">
             <a class="nav-link" href="zapisnik.html">Zapisnik Sati</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="akcije.html">Pregledaj Volonterske Akcije</a>
+          <a class="nav-link" href="akcije.html">Pregledaj Volonterske Akcije</a>
           </li>
         </ul>
-        <form class="d-flex" onsubmit="return Pretraži(event)">
-          <input class="form-control me-2" id="search" type="search" placeholder="Split" aria-label="Search">
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Split" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Pretraži</button>
         </form>
       </div>
     </div>
   </nav>
-  <div class="container text-light" id="container">
-    <div class="row text-center" id="row0">
+  <div class="container" id="container">
+    <div class="row text-center text-light" id="row0">
       <h1 style="margin-bottom: 10px;">Ulogirajte se!</h1>
     </div>
     <div class="row text-center text-white" id="row1">
@@ -73,7 +75,7 @@
               <option value="Zadar">Zadar</option>
               <option value="Šolta">Šolta</option>
               <option value="Brač">Brač</option>
-              <option value="Šolta">Šolta</option>
+              <option value="Šibenik">Šibenik</option>
             </select>
           </div>
           <div class="mb-3">
@@ -100,7 +102,9 @@
       </div> -->
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
   <script type="text/javascript" src="../js/zapisnikSati.js"></script>
-  <script type="text/javascript" src="../js/main.js"></script>
+
 </html>
