--- a/pages/index.html
+++ b/pages/index.html
@@ -4,88 +4,93 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--BOOTSTRAP CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--CSS-->
     <link href="../assets\css\style1.css" rel="stylesheet">
+    <!--TITLE & ICON-->
     <title>iVolonteri</title>
+    <link rel="icon" href="../assets/img/icon.png">
 </head>
 <body class="bg-dark">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">iVolonteri</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="zapisnik.html">Zapisnik Sati</a>
-              </li>
-                <a class="nav-link" href="akcije.html">Pregledaj Volonterske Akcije</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Split" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Pretraži</button>
-            </form>
-          </div>
-        </div>
-    </nav>
-    <div class="container text-white">
-      <div class="row justify-content-md-center">
-        <div class="col-md-auto">
-          <h1>iVolonteri</h1>
-        </div>
-      </div>
-      <div class="row justify-content-md-center">
-        <div class="col-md-auto">
-          <h4>Ova aplikacija će Vam pomoći u pronalaženju volonterskih akcija!</h4>
-        </div>
-      </div>
-      <div class="row justify-content-md-center">
-        <div class="col-md-auto">
-          <h2>O nama</h2>
-        </div>
-      </div>
-      <div class="row justify-content-md-center">
-        <div class="col-md-auto">
-          <p>Mi smo Branimir Vid Maljković i Paul Damjanović i nakon što smo vidjeli kako je teško pronaći volonterske akcije odlučili smo napraviti aplikaciju sa kojom možete lagano pronaći lokalne volonterske akcije.
-            
-          </p>
-        </div>
-      </div>
-      <div class="row justify-content-md-center">
-        <div class="col-md-auto">
-          <h2>Branimir Vid Maljković</h2>
-        </div>
-      </div>
-      <div class="row justify-content-md-center">
-        <div class="col">
-          <p>Branimir Vid Maljković rođen 9.1.2007. pohađao je osnovnu školu u OŠ Marjan, a srednju školu pohađa u Prirodoslovnoj školi Split na smjeru Gimnazija.
-            Počeo je programirati sa 13 kada je u sedmom razredu prvi put pohađao EDIT.
-            U osmom razredu je počeo raditi igrice i opet pohađao EDIT, te je bio 3. Još je išao na natjecanje iz razvoja softwarea gdje je bio 7. u državi. 
-            Sada u srednjoj školi još uvijek pohađa EDIT i Centar izvrsnosti informatike. Izbacio je i neke igrice na platformu Itch.io i trenutno radi na igrici O the Game.
-          </p>
-        </div>
-        <div class="col">
-          <img src="../assets/img/branimir.png" alt="Branimir na prošlom EDITu" class="rounded float-start portrait">
-        </div>
-      </div>
-      <div class="row justify-content-md-center">
-        <div class="col-md-auto">
-          <h2>Paul Damjanović</h2>
-        </div>
-      </div>
-      <div class="row justify-content-md-center">
-        <div class="col">
-          <p>Paul Damjanović rođen 12.4.2005. pohađao je Osnovnu školu Brač, te trenutno pohađa drugi razred opće gimnazije u Srednjoj školi Brač.
-            Počeo je programirati sa 14 kada je u osmom razredu prvi put pohađao EDIT. 
-          </p>
-        </div>
-        <div class="col">
-          <img src="../assets/img/paul.png" alt="Slika Paula" class="rounded float-start portrait">
-        </div>
+  <!--NAVIGATION BAR-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">iVolonteri</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="zapisnik.html">Zapisnik Sati</a>
+          </li>
+          <li>
+            <a class="nav-link" href="akcije.html">Pregledaj Volonterske Akcije</a>
+          </li>
+          <li>
+            <a class="nav-link" href="oNama.html">O nama</a>
+          </li>
+        </ul>
+        <form class="d-flex" onsubmit="PretrazivanjeAkcija(searchInp.value, event)">
+          <input class="form-control me-2" id="search" type="search" placeholder="Split" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Pretraži</button>
+        </form>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="../js/main.js"></script>
+  </nav>
+  <!--TEXT-->
+  <div class="container" id="container">
+    <!--O Aplikaciji-->
+    <div class="row justify-content-md-center text-white">
+      <div class="col-md-auto">
+        <h1>iVolonteri</h1>
+      </div>
+    </div>
+    <div class="row justify-content-md-center text-white">
+      <div class="col-md-auto">
+        <h4>Ova aplikacija će Vam pomoći u pronalaženju volonterskih akcija!</h4>
+      </div>
+    </div>
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="..\assets/img/crveniKrizVolonteri.jpg" class="d-block w-100 main-img" alt="Crveni Križ" >
+          <div class="carousel-caption">
+            <h4 class="carousel-text">Pridružite nam se u stvaranju boljeg svijeta!</h4>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="..\assets/img/ZMAG.jpg" class="d-block w-100 main-img" alt="ZMAG" >
+          <div class="carousel-caption">
+            <h4 class="carousel-text">Dovedite promjenu koju želite u svijetu!</h4>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="..\assets/img/pokretOtokaVolonteri.jpg" class="d-block w-100 main-img" alt="Pokret Otoka" >
+          <div class="carousel-caption">
+            <h4 class="carousel-text">"Ova aplikacija mi je pomogla da postanen više aktivna u svojojem društvu." - Ilijana Gudelj</h4>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+  <!--JAVASCRIPT-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="../js/main.js"></script>
+
+</body>
 </html>
