--- a/pages/akcije.html
+++ b/pages/akcije.html
@@ -44,7 +44,7 @@
     </div>
   </nav>
   <!--CONTAINER-->
-  <div class="container" id="container" >
+  <div class="container">
     <div class="dropdown" style="margin: 5px;">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="filter" data-bs-toggle="dropdown" aria-expanded="false">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-filter" viewBox="0 0 16 16">
@@ -128,6 +128,8 @@
         </li>
       </ul>
     </div>
+  </div>
+  <div class="container" id="container" >
   </div>
   <!--BOTUN ZA DODAT AKCIJE-->
   <div class="bottom-container">
