--- a/pages/index.html
+++ b/pages/index.html
@@ -22,8 +22,15 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="zapisnik.html">Zapisnik Sati</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Račun
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+              <li><a class="dropdown-item" href="zapisnik.html">Zapisnik Sati</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Log out</a></li>
+            </ul>
           </li>
           <li>
             <a class="nav-link" href="akcije.html">Pregledaj Volonterske Akcije</a>
@@ -87,10 +94,10 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+  </div>
 
   <!--JAVASCRIPT-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script type="text/javascript" src="../js/main.js"></script>
-
 </body>
 </html>
