--- a/pages/adminPanel.html
+++ b/pages/adminPanel.html
@@ -6,14 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--BOOTSTRAP CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css"></link>
   <!--CSS-->
   <link rel="stylesheet" href="../assets\css\style1.css">
   <link rel="stylesheet" href="../assets\css\zapisnik.css">
+	<link rel="stylesheet" href="../assets\css\adminPanel.css">
   <!--TITLE-->
-  <title>Zapisnik Sati</title>
+  <title>Admin Panel</title>
   <link rel="icon" href="../assets/img/icon.png">
 </head>
-<body class="bg-dark img-bg" onload="CheckStorage()">
+<body class="bg-dark img-bg" onload="PageLoadAdminP()">
   <!--NAVIGATION BAR-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
@@ -37,31 +39,50 @@
     </div>
   </nav>
   <!--CONTAINER-->
-  <div class="container" id="container">
-    <div class="row text-center" id="row0">
-      <div class="header">
-        <img src="../assets\img\userAvatar.png" alt="To si ti!" class="avatar">
-        <h3 class="topText" id="topText">Ulogirajte se!</h3>
-      </div>
-    </div>
-    <div class="row acc-box text-center text-white" id="row1">
-      <form class="text-light" onsubmit="LogIn();" style="margin-top: 5px;">
-        <div class="form-floating mb-3 text-muted">
-          <input type="text" class="form-control" id="usernameInp" placeholder="Korisničko ime">
-          <label for="username" class="form-label">Korisničko ime</label>
-        </div>
-        <div class="form-floating mb-3 text-muted">
-          <input type="password" class="form-control" id="passwordInp" placeholder="Lozinka">
-          <label for="password" class="form-label">Lozinka</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Potvrdi</button>
-      </form>
-      <button type="button" class="create-acc-btn btn btn-link" id="createAccBtn" onclick="ShowCreateAcc()">Nemate račun? Napravite ga!</button>
-    </div>
+  <div class="container bacround">
+		<div class="row">
+			<div class="col" id="col0">
+				<div class="row" id="row00">
+					<form class="text-white" onsubmit="return AddActivity(event)">
+						<legend>Dodaj Akciju</legend>
+						<div class="mb-3">
+							<label for="nameInp" class="form-label">Upišite ime akcije</label>
+							<input type="text" id="nameInp" class="form-control" placeholder="Crveni Križ">
+						</div>
+						<div class="mb-3">
+							<label for="formFile" class="form-label">Dodajte Sliku</label>
+							<input class="form-control" type="file" id="imageFile" onchange="FileUpload()">
+						</div>
+						<div class="mb-3">
+							<label for="discriptionInp" class="form-label">Opis</label>
+							<textarea class="form-control" id="discriptionInp" rows="3"></textarea>
+						</div>
+						<div class="mb-3">
+							<label for="placeInp" class="form-label">Upišite grad (ako je više odvajate ih zarezom)</label>
+							<input type="text" id="placeInp" class="form-control" placeholder="Split, Šolta">
+            </div>
+						<div class="mb-3">
+							<label for="linkInp" class="form-label">Upišite link</label>
+							<input type="text" id="linkInp" class="form-control" placeholder="https://bit.ly/Ur3um">
+						</div>
+						<button type="submit" class="btn btn-primary">Dodaj</button>
+					</form>
+				</div>
+				<div class="row" id="row01">
+					<div class="users-container" id="usersContainer"></div>
+				</div>
+			</div>
+			<div class="col" id="col1">
+				<div class="activity-container" id="container"></div>
+			</div>
+		</div>
   </div>
+  
   <!--JAVASCRIPT-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script type="text/javascript" src="../js/zapisnikSati.js"></script>
   <script type="text/javascript" src="../js/main.js"></script>
+  <script type="text/javascript" src="../js/adminPanel.js"></script>
+	<script type="text/javascript" src="../js/akcije.js"></script>
 </body>
 </html>
