--- a/pages/index.html
+++ b/pages/index.html
@@ -8,10 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--CSS-->
     <link href="../assets\css\style1.css" rel="stylesheet">
+    <link href="../assets\css\oNama.css" rel="stylesheet">
     <!--TITLE & ICON-->
     <title>iVolonteri</title>
     <link rel="icon" href="../assets/img/icon.png">
 </head>
+
 <body class="bg-dark">
   <!--NAVIGATION BAR-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -22,25 +24,14 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Račun
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-              <li><a class="dropdown-item" href="zapisnik.html">Zapisnik Sati</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Log out</a></li>
-            </ul>
+          <li class="nav-item dropdown" id="accountButton">
+            <a class="nav-link" href="zapisnik.html" role="button">Prijavi se</a>
           </li>
           <li>
             <a class="nav-link" href="akcije.html">Pregledaj Volonterske Akcije</a>
-          </li>
-          <li>
-            <a class="nav-link" href="oNama.html">O nama</a>
-          </li>
         </ul>
-        <form class="d-flex" onsubmit="PretrazivanjeAkcija(searchInp.value, event)">
-          <input class="form-control me-2" id="search" type="search" placeholder="Split" aria-label="Search">
+        <form class="d-flex" onsubmit="SearchActivities(searchInp.value, event)">
+          <input class="form-control me-2" id="searchInp" type="searchInp" placeholder="Split" aria-label="searchInp">
           <button class="btn btn-outline-success" type="submit">Pretraži</button>
         </form>
       </div>
@@ -59,7 +50,7 @@
         <h4>Ova aplikacija će Vam pomoći u pronalaženju volonterskih akcija!</h4>
       </div>
     </div>
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="position: relative;">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -67,7 +58,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="..\assets/img/crveniKrizVolonteri.jpg" class="d-block w-100 main-img" alt="Crveni Križ" >
+          <img src="..\assets/img/crveniKrizVolonteri.jpg" class="d-block w-100 main-img" alt="Crveni Križ">
           <div class="carousel-caption">
             <h4 class="carousel-text">Pridružite nam se u stvaranju boljeg svijeta!</h4>
           </div>
@@ -81,7 +72,7 @@
         <div class="carousel-item">
           <img src="..\assets/img/pokretOtokaVolonteri.jpg" class="d-block w-100 main-img" alt="Pokret Otoka" >
           <div class="carousel-caption">
-            <h4 class="carousel-text">"Ova aplikacija mi je pomogla da postanen više aktivna u svojojem društvu." - Ilijana Gudelj</h4>
+            <h4 class="carousel-text">"Ova aplikacija mi je pomogla da postanen aktivna u društvu." - Ilijana Gudelj</h4>
           </div>
         </div>
       </div>
@@ -93,6 +84,67 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
+    </div>
+    <br>
+    <div class="row justify-content-md-center text-white">
+      <div class="col-md-auto">
+        <h5>
+          Naš cilj je da se svi Hrvati koji su željni unaprijediti živote svojih sugrađana kroz dobrotvoran rad mogu brzo i lako informirati o tome kome je i gdje pomoć potrebna.
+          Naša stranica vas može izvijestiti o volonterskim akcijama koje se provode na vašem području, što točno rade i kako im se možete pridružiti
+        </h5>
+      </div>
+    </div>
+    <hr>
+    <!--O NAMA-->
+    <div class="row justify-content-md-center text-white">
+      <div class="col-md-auto">
+        <h2>O nama</h2>
+      </div>
+    </div>
+    <div class="row justify-content-md-center text-white">
+      <div class="col-md-auto">
+        <h5>
+          Mi smo Branimir Vid Maljković i Paul Damjanović i nakon što smo vidjeli kako je teško pronaći volonterske
+          akcije odlučili smo napraviti aplikaciju sa kojom možete lagano pronaći lokalne volonterske akcije.
+        </h5>
+      </div>
+    </div>
+    <!--BRANIMIR I PAUL-->
+    <div class="row">
+      <!--O BRANIMIRU-->  
+      <div class="col col-md-4">
+        <div class="bio"> 
+          <img class="bio-img" src="..\assets/img/branimir.png" alt="Branimir">
+          <!--DIV S TEKSTOM KOJI PREKRIVA SLIKU I NEVIDLJIV JE PRIJE HOVERA-->
+          <div class="bio-overlay"> 
+            <h3 class="bio-title">Branimir Vid Maljković</h3>
+            <p class="bio-description">
+              Pohađao je osnovnu školu u OŠ Marjan, a srednju školu pohađa u Prirodoslovnoj školi Split na smjeru
+              Gimnazija.
+              Počeo je programirati sa 13 kada je u sedmom razredu prvi put pohađao EDIT.
+              U osmom razredu je počeo raditi igrice i opet pohađao EDIT, te je bio 3. Još je išao na natjecanje iz
+              razvoja softwarea gdje je bio 7. u državi.
+              Sada u srednjoj školi još uvijek pohađa EDIT i Centar izvrsnosti informatike. Izbacio je i neke igrice na
+              platformu Itch.io i trenutno radi na igrici O the Game.
+            </p>
+          </div>
+        </div>
+      </div>
+      <!--O PAULU-->
+      <div class="col col-md-4 offset-md-3">
+        <div class="bio">
+          <img class="bio-img" src="..\assets/img/paul.png" alt="Paul">
+          <!--DIV S TEKSTOM KOJI PREKRIVA SLIKU I NEVIDLJIV JE PRIJE HOVERA-->
+          <div class="bio-overlay">
+            <h3 class="bio-title">Paul Damjanović</h3>
+            <p class="bio-description">
+              Pohađao je Osnovnu školu Brač, te trenutno pohađa drugi razred opće gimnazije u Srednjoj školi Brač.
+              S 14 godina je počeo kodirati u sklopu programa Edit code school i trenutno uči izrađivati geografse karte uz
+              pomoć q-gis programa.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
