--- a/pages/index.html
+++ b/pages/index.html
@@ -50,6 +50,7 @@
         <h4>Ova aplikacija će Vam pomoći u pronalaženju volonterskih akcija!</h4>
       </div>
     </div>
+    <!--PREZENTACIJA-->
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="position: relative;">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -85,7 +86,8 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <br>
+    <hr>
+    <!--NAŠI CILJEVI-->
     <div class="row justify-content-md-center text-white">
       <div class="col-md-auto">
         <h5>
