Comments added in the coude

--- a/pages/zapisnik.html
+++ b/pages/zapisnik.html
@@ -39,9 +39,9 @@
   <!--CONTAINER-->
   <div class="container" id="container">
     <div class="row text-center" id="row0">
-      <div class="header">
+      <div class="header-box">
         <img src="../assets\img\userAvatar.png" alt="To si ti!" class="avatar">
-        <h3 class="topText" id="topText">Ulogirajte se!</h3>
+        <h3 class="top-text" id="topText">Ulogirajte se!</h3>
       </div>
     </div>
     <div class="row acc-box text-center text-white" id="row1">
