--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--CSS-->
     <link href="../assets\css\style1.css" rel="stylesheet">
-    <link href="../assets\css\oNama.css" rel="stylesheet">
+    <link href="../assets\css\indexPage.css" rel="stylesheet">
     <!--TITLE & ICON-->
     <title>iVolonteri</title>
     <link rel="icon" href="../assets/img/icon.png">
@@ -37,9 +37,10 @@
       </div>
     </div>
   </nav>
-  <!--TEXT-->
+
+  <!--CONTAINER-->
   <div class="container" id="container">
-    <!--O Aplikaciji-->
+    <!--O APLIKACIJI-->
     <div class="row justify-content-md-center text-white">
       <div class="col-md-auto">
         <h1>iVolonteri</h1>
@@ -87,16 +88,18 @@
       </button>
     </div>
     <hr>
+
     <!--NAŠI CILJEVI-->
     <div class="row justify-content-md-center text-white">
       <div class="col-md-auto">
         <h5>
           Naš cilj je da se svi Hrvati koji su željni unaprijediti živote svojih sugrađana kroz dobrotvoran rad mogu brzo i lako informirati o tome kome je i gdje pomoć potrebna.
-          Naša stranica vas može izvijestiti o volonterskim akcijama koje se provode na vašem području, što točno rade i kako im se možete pridružiti
+          Naša stranica vas može izvijestiti o volonterskim akcijama koje se provode na vašem području, što točno rade i kako im se možete pridružiti.
         </h5>
       </div>
     </div>
     <hr>
+
     <!--O NAMA-->
     <div class="row justify-content-md-center text-white">
       <div class="col-md-auto">
@@ -152,6 +155,7 @@
 
   <!--JAVASCRIPT-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="../js/zapisnikSati.js"></script>
   <script type="text/javascript" src="../js/main.js"></script>
 </body>
 </html>
