--- a/pages/index.html
+++ b/pages/index.html
@@ -52,7 +52,7 @@
       </div>
     </div>
     <!--PREZENTACIJA-->
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="position: relative;">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -117,15 +117,14 @@
     <!--BRANIMIR I PAUL-->
     <div class="row">
       <!--O BRANIMIRU-->  
-      <div class="col col-md-4">
+      <div class="col col-xl-4">
         <div class="bio"> 
           <img class="bio-img" src="..\assets/img/branimir.png" alt="Branimir">
           <!--DIV S TEKSTOM KOJI PREKRIVA SLIKU I NEVIDLJIV JE PRIJE HOVERA-->
           <div class="bio-overlay"> 
             <h3 class="bio-title">Branimir Vid Maljković</h3>
             <p class="bio-description">
-              Pohađao je osnovnu školu u OŠ Marjan, a srednju školu pohađa u Prirodoslovnoj školi Split na smjeru
-              Gimnazija.
+              Pohađao je osnovnu školu u OŠ Marjan, a srednju školu pohađa u Prirodoslovnoj školi Split na smjeru Gimnazija.
               Počeo je programirati sa 13 kada je u sedmom razredu prvi put pohađao EDIT.
               U osmom razredu je počeo raditi igrice i opet pohađao EDIT, te je bio 3. Još je išao na natjecanje iz
               razvoja softwarea gdje je bio 7. u državi.
@@ -136,7 +135,7 @@
         </div>
       </div>
       <!--O PAULU-->
-      <div class="col col-md-4 offset-md-3">
+      <div class="col col-xl-4 offset-xl-4">
         <div class="bio">
           <img class="bio-img" src="..\assets/img/paul.png" alt="Paul">
           <!--DIV S TEKSTOM KOJI PREKRIVA SLIKU I NEVIDLJIV JE PRIJE HOVERA-->
